Connected forms in one row

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
     <div class="container">
         <h1>Uzupełnij formularz</h1>
         <form id="form">
-            <div class="mb-3">
-                <label for="firstName" class="form-label">Imię</label>
-                <input type="text" class="form-control" id="firstName" placeholder="Wpisz imię" required>
-            </div>
-            <div class="mb-3">
-                <label for="lastName" class="form-label">Nazwisko</label>
-                <input type="text" class="form-control" id="lastName" placeholder="Wpisz nazwisko" required>
+            <div class="row">
+                <div class="col">
+                    <div class="mb-3">
+                        <label for="firstName" class="form-label">Imię</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Wpisz imię" required>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="mb-3">
+                        <label for="lastName" class="form-label">Nazwisko</label>
+                        <input type="text" class="form-control" id="lastName" placeholder="Wpisz nazwisko" required>
+                    </div>
+                </div>
             </div>
             <div class="mb-3">
                 <label for="street" class="form-label">Ulica</label>
