City and zip code in one row

--- a/index.html
+++ b/index.html
@@ -58,15 +58,16 @@
                             required>
                     </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="city" class="form-label">Miasto</label>
-                <input type="text" class="form-control" id="city" placeholder="Wpisz miasto" required>
-            </div>
-            <div class="mb-3">
-                <label for="zipCode" class="form-label">Kod pocztowy</label>
-                <input type="text" class="form-control" id="zipCode" placeholder="Wpisz kod pocztowy" required>
-            </div>
+                <div class="row mb-3">
+                    <div class="col">
+                        <label for="city" class="form-label">Miasto</label>
+                        <input type="text" class="form-control" id="city" placeholder="Wpisz miasto" required>
+                    </div>
+                    <div class="col">
+                        <label for="zipCode" class="form-label">Kod pocztowy</label>
+                        <input type="text" class="form-control" id="zipCode" placeholder="Wpisz kod pocztowy" required>
+                    </div>
+                </div>                
             <div class="mb-3">
                 <label for="shippingMethod" class="form-label">Rodzaj przesyłki</label>
                 <select class="form-select" id="shippingMethod" required>
