Move email address field

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 </div>
             </div>
             <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Adres e-mail</label>
+                <input type="email" class="form-control" id="exampleInputEmail1">
+            </div>
+            <div class="mb-3">
                 <label for="street" class="form-label">Ulica</label>
                 <input type="text" class="form-control" id="street" placeholder="Wpisz ulicę" required>
             </div>
@@ -87,10 +91,6 @@
             </div>
 
             <!-- Dodatkowe pola, np. dane do faktury -->
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1">
-            </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="vatUE">
                 <label class="form-check-label" for="vatUE">VAT UE</label>
